--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,9 @@ dependencies {
 
     // Telegram
     implementation 'org.telegram:telegrambots:6.1.0'
+
+    // Gson
+    implementation 'com.google.code.gson:gson:2.9.0'
 }
 
 ext {
