--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     // lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
 
     // REST Docs
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
@@ -68,6 +70,11 @@ dependencies {
 
     // Resilience4j
     implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.0.2'
+
+    // Redis
+    implementation("org.springframework.boot:spring-boot-starter-data-redis")
+    implementation("org.springframework.boot:spring-boot-starter-cache")
+
 }
 
 ext {
