--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,11 @@ spring:
     username: root
     password: 1234
 
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
 resilience4j:
   circuitbreaker:
     instances:
