--- a/build.gradle
+++ b/build.gradle
@@ -95,39 +95,44 @@ ext {
 test {
     useJUnitPlatform()
 
+    // TODO. Restdocs 활성화
     // REST Docs : 위에서 작성한 snippetsDir 디렉토리를 test의 output으로 구성하는 설정 -> 스니펫 조각들이 build/generated-snippets로 출력
-    outputs.dir snippetsDir
+    // outputs.dir snippetsDir
+
+    // TODO. 테스트 코드 활성화
+    enabled = false
 }
 
+// TODO. Restdocs 활성화
 // REST Docs 관련 설정
-asciidoctor {
-    dependsOn test // test 작업 이후에 동작하도록 설정
-    configurations 'asciidoctorExtensions' // 위에서 작성한 configuration 적용
-    inputs.dir snippetsDir // snippetsDir를 입력으로 구성
-}
-
-asciidoctor.doFirst {
-    // static/docs 폴더 비우기
-    delete file('src/main/resources/static/docs')
-}
-
-// asccidoctor 작업 이후 생성된 HTML 파일을 static/docs 로 copy
-task copyDocument(type: Copy) {
-    dependsOn asciidoctor
-    from file("build/docs/asciidoc")
-    into file("src/main/resources/static/docs")
-}
-
-build {
-    dependsOn copyDocument
-}
-
-bootJar {
-    dependsOn asciidoctor
-    from ("${asciidoctor.outputDir}/html5") {
-        into 'static/docs'
-    }
-}
+//asciidoctor {
+//    dependsOn test // test 작업 이후에 동작하도록 설정
+//    configurations 'asciidoctorExtensions' // 위에서 작성한 configuration 적용
+//    inputs.dir snippetsDir // snippetsDir를 입력으로 구성
+//}
+//
+//asciidoctor.doFirst {
+//    // static/docs 폴더 비우기
+//    delete file('src/main/resources/static/docs')
+//}
+//
+//// asccidoctor 작업 이후 생성된 HTML 파일을 static/docs 로 copy
+//task copyDocument(type: Copy) {
+//    dependsOn asciidoctor
+//    from file("build/docs/asciidoc")
+//    into file("src/main/resources/static/docs")
+//}
+//
+//build {
+//    dependsOn copyDocument
+//}
+//
+//bootJar {
+//    dependsOn asciidoctor
+//    from ("${asciidoctor.outputDir}/html5") {
+//        into 'static/docs'
+//    }
+//}
 // REST Docs
 
 // QueryDSL 관련 설정
