--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,19 +7,19 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    jdbc-url: jdbc:mysql://localhost:3306/api
+    jdbc-url: jdbc:mysql://app-mysql:3306/api?allowPublicKeyRetrieval=true&useSSL=false
     username: root
     password: 1234
 
   datasource-sub:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    jdbc-url: jdbc:mysql://localhost:3306/apisub
+    jdbc-url: jdbc:mysql://app-mysql:3306/apisub?allowPublicKeyRetrieval=true&useSSL=false
     username: root
     password: 1234
 
   data:
     redis:
-      host: localhost
+      host: redis
       port: 6379
 
 resilience4j:
