--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - main  # main 브랜치 push 시 실행
+      - main
 
 jobs:
   deploy:
@@ -23,7 +23,7 @@ jobs:
       - name: Deploy via SSH
         run: |
           ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-            cd ~/your-app-folder  # 배포 폴더로 이동 (필요시 변경)
+            cd ~/myapp
             git pull origin main
             docker compose down
             docker compose up -d --build
