--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,16 +13,21 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v3
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+
+      - name: Build the project
+        run: |
+          ./gradlew build  # Gradle 빌드 실행 (JAR 파일 생성)
+
       - name: Setup SSH
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.EC2_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
-
-      - name: Build Docker image
-        run: |
-          docker build -t myapp .  # Dockerfile을 기준으로 이미지를 빌드합니다.
 
       - name: Deploy via SSH
         run: |
@@ -36,9 +41,9 @@ jobs:
             # ops/docker 디렉토리로 이동
             cd ops/docker
 
-            # Docker Compose로 기존 컨테이너 종료
+            # 기존 Docker Compose 컨테이너 종료
             docker-compose down
 
-            # Docker Compose로 새로운 빌드 및 실행
+            # Docker Compose로 새로 빌드 및 실행
             docker-compose up -d --build
           EOF
