--- a/ops/docker/Dockerfile
+++ b/ops/docker/Dockerfile
@@ -2,10 +2,10 @@
 FROM eclipse-temurin:17-jdk AS base
 
 # 작업 디렉토리 설정
-WORKDIR /myapp
+WORKDIR /app
 
 # 빌드된 JAR 파일을 컨테이너에 복사
-COPY build/libs/spring-api.jar spring-api.jar
+COPY ../../build/libs/spring-api.jar spring-api.jar
 
 # 애플리케이션 실행
 ENTRYPOINT ["java", "-jar", "spring-api.jar"]
