aws 및 git action 준비

--- a/ops/docker/Dockerfile
+++ b/ops/docker/Dockerfile
@@ -3,8 +3,8 @@ FROM eclipse-temurin:17-jdk
 # 작업 디렉토리 설정
 WORKDIR /app
 
-# 프로젝트 전체 복사 (프로젝트 루트 기준)
-COPY ../../ .
+# 프로젝트 전체 복사
+COPY . .
 
 # gradlew 실행 권한 부여 및 빌드
 RUN chmod +x ./gradlew && ./gradlew build --no-daemon
