--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,8 @@ services:
 
   app-mysql:
     container_name: app-mysql
-    image: mysql:8.0
+    image: mysql:5.7
+    # platform: linux/amd64
     environment:
       MYSQL_ROOT_PASSWORD: 1234
       MYSQL_DATABASE: api
