aws 및 git action 준비

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,4 +44,4 @@ jobs:
           script: |
             cd ~/myapp
             docker-compose down
-            docker-compose up -d
+            docker-compose up --build -d
