--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,5 +43,6 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           script: |
             cd ~/myapp
+            git pull origin main
             docker-compose down
             docker-compose up --build -d
