--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,32 @@ services:
     networks:
       - app-network
 
+  app-zookeeper:
+    image: confluentinc/cp-zookeeper:7.6.0
+    container_name: app-zookeeper
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - "2181:2181"
+    networks:
+      - app-network
+
+  app-kafka:
+    image: confluentinc/cp-kafka:7.6.0
+    container_name: app-kafka
+    depends_on:
+      - app-zookeeper
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: app-zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://app-kafka:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    networks:
+      - app-network
+
 networks:
   app-network:
     driver: bridge
