--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,8 +29,11 @@ spring:
 
   data:
     redis:
-      host: redis
+      host: app-redis
       port: 6379
+    elasticsearch:
+      host: app-elasticsearch
+      port: 9200
 
   kafka:
     bootstrap-servers: app-kafka:9092
