--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,6 +123,19 @@ services:
     networks:
       - app-network
 
+  app-kibana:
+    image: 'docker.elastic.co/kibana/kibana:7.10.2'
+    container_name: app-kibana
+    environment:
+      ELASTICSEARCH_URL: http://app-elasticsearch:9200
+      ELASTICSEARCH_HOSTS: http://app-elasticsearch:9200
+    ports:
+      - "5601:5601"
+    depends_on:
+      - app-elasticsearch
+    networks:
+      - app-network
+
 networks:
   app-network:
     driver: bridge
