실행환경 분리 - yml 단순 분리

--- a/ops/docker/Dockerfile
+++ b/ops/docker/Dockerfile
@@ -4,4 +4,4 @@ WORKDIR /app
 
 COPY spring-api.jar app.jar
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar", "--spring.profiles.active=local"]
