--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,5 +47,5 @@ jobs:
           script: |
             cd ~/myapp
             git pull origin main
-            docker-compose down
-            docker-compose up --build -d
+            docker-compose -f docker-compose-dev.yml down
+            docker-compose -f docker-compose-dev.yml up -d --build
