--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -12,6 +12,7 @@ services:
       - app-mysql
       - app-redis
     environment:
+      SPRING_PROFILES_ACTIVE: dev
       SPRING_DATASOURCE_URL: jdbc:mysql://app-mysql:3306/api
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: 1234
