--- a/logstash-local.conf
+++ b/logstash-local.conf
@@ -1,6 +1,6 @@
 input {
     kafka {
-        bootstrap_servers => "localhost:9092"
+        bootstrap_servers => "app-kafka:9092"
         topics => ["access-log"]
         group_id => "logstash"
         consumer_threads => 3
@@ -28,7 +28,7 @@ filter {
 
 output {
     elasticsearch {
-        hosts => ["localhost:9200"]
+        hosts => ["app-elasticsearch:9200"]
         index => "access-log-%{+YYYY-MM-dd}"
     }
 }
