--- a/build.gradle
+++ b/build.gradle
@@ -93,6 +93,12 @@ dependencies {
 
     // Elastic Search
     implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch:3.2.0'
+
+    // Spring Boot Cache
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+
+    // Caffeine 캐시
+    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
 }
 
 ext {
