--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -19,10 +19,16 @@ spring:
       add-mappings: false
 
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    jdbc-url: jdbc:mysql://localhost:3306/api?allowPublicKeyRetrieval=true&useSSL=false
-    username: root
-    password: 1234
+    master:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      jdbc-url: jdbc:mysql://localhost:3306/api?allowPublicKeyRetrieval=true&useSSL=false
+      username: root
+      password: 1234
+    slave:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      jdbc-url: jdbc:mysql://localhost:3307/api?allowPublicKeyRetrieval=true&useSSL=false
+      username: root
+      password: 1234
 
   datasource-sub:
     driver-class-name: com.mysql.cj.jdbc.Driver
